--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,10 @@
 ---
 
 @import "{{ site.theme }}";
-.container {
+section {
     max-width: none;
+    width: 100%;
+    float: none;
 }
 header {
     display: none;
